--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # Test binary, built with `go test -c`
 *.test
+testdata/vmlinuz
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
