fix booting v4.9 kernel
cgroupfs on 4.9 doesn't support one of the option and returns EINVAL.
Don't mount it from init, users can use a setup command to achieve
the same.

Add 4.9 to CI.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,12 @@ concurrency:
 jobs:
   build:
     runs-on: buildjet-2vcpu-ubuntu-2204
+    strategy:
+      matrix:
+        kernel-version: [ "stable", "4.9" ]
+    env:
+      CI_KERNEL: ghcr.io/cilium/ci-kernels:${{ matrix.kernel-version }}
+
     steps:
     - uses: actions/checkout@v3
 
