add gdb stub support

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends qemu-system-x86
+        sudo apt-get install -y --no-install-recommends gdb qemu-system-x86
 
     - run: sudo chmod 0666 /dev/kvm
 
@@ -60,7 +60,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends qemu-system-aarch64
+        sudo apt-get install -y --no-install-recommends gdb qemu-system-aarch64
 
     - name: Build
       run: go build -v ./...
